--- a/index.html
+++ b/index.html
@@ -10,4 +10,9 @@
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
+  <style>
+    body {
+      margin: 0;
+    }
+  </style>
 </html>
